# PORTAL_TRUSS

./: .gitignore  AI_SETUP_GUIDE.md  Buckling.cpp  Buckling.h  CMakeLists.txt  CMakePresets.json  LectureTrussSolver.cpp  LectureTrussSolver.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenSeesRunner.cpp  OpenSeesRunner.h  PortalSolver.cpp  PortalSolver.h  SectionOptimizer.cpp  SectionOptimizer.h  SteelCatalog.cpp  SteelCatalog.h  TurkishLoads.cpp  TurkishLoads.h  main.cpp
cmake/: PortalOpenSees.cmake
scripts/: install-qt-windows.ps1
